# Ygotrainingbot

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
configs/: archetype-key-cards.json  edopro-card-id-aliases.json  ygoprodeck-deck-cache.json  ygoprodeck-deck-sources.json
docs/: architecture.md  dashboard.md  edopro-integration.md  edopro-play-vs-bot.md  fly-deploy.md  format-packs.md  iphone-format-training.md  training-roadmap.md
scripts/: bootstrap_edopro_home.sh  ensure_all_tournament_decks.py  export_bracket_ykds.py  export_duel_watch_bundle.py  export_random_edopro_watch.py  fetch_ygoprodeck_tournament_decks.py  fly-start.sh  generate_banlist_format_packs.py  prune_ygoprodeck_cache.py  refresh_curated_deck_cache.py  sample_high_decision_games.py  split_format_pack_extras.py
tests/: test_agents.py  test_banlist_catalog.py  test_bot_league.py  test_bot_stats.py  test_card_ids.py  test_curriculum.py  test_dashboard.py  test_dashboard_kill_jobs.py  test_deck_composition.py  test_deck_lists.py  test_deck_quality.py  test_decks.py  test_duel_live_log.py  test_duel_logs.py  test_edopro.py  test_edopro_bot_server.py  test_edopro_watch.py  test_format_matrix.py  test_format_training.py  test_gateway_health_report.py  test_human_duels.py  test_league_tournament.py  test_learning.py  test_learning_from_game_logs.py  test_learning_improvements.py  test_paths.py  test_phases_4_8.py  test_pipeline.py  test_policy_runtime.py  test_replay_convert.py  test_script_health.py  test_static_training.py  test_tactical.py  test_ydk.py  (+1 more)
(+102 files in other folders)
