[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ygotrainingbot"
version = "0.1.0"
description = "A Yu-Gi-Oh! learning coach and opponent bot foundation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ygotrainingbot contributors" }
]
dependencies = []

[project.scripts]
ygotrain = "ygotrainingbot.cli:main"
ygotrain-dashboard = "ygotrainingbot.dashboard:main"

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
